--- a/st.css
+++ b/st.css
@@ -10,5 +10,35 @@ header {
     color: #fff;
     padding: 1em 0;
     text-align: center;
+    margin: 0;
 }
 
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+nav ul li {
+    display: inline;
+    margin: 0 1em;
+}
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+main {
+    padding: 2em;
+}
+section {
+    margin-bottom: 2em;
+    text-align: center;
+}
+footer{
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1em 0;
+    width: 100%;
+}
+section img{
+    height: 300px;
+}
